--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,12 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
-# Windows Installer files
+# Windows Installer files, back
 *.cab
 *.msi
 *.msm
 *.msp
+*.bak
 
 # Windows shortcuts
 *.lnk
