--- a/package.xml
+++ b/package.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
+<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
 <package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
   <name>KicadStepUp Workbench</name>
   <description>A bidirectional ECAD/MCAD collaboration between KiCAD and FreeCAD.</description>
@@ -13,6 +13,8 @@
       <classname>KicadStepUp Workbench</classname>
       <subdirectory>./</subdirectory>
       <freecadmin>0.17.0</freecadmin>
+      <tag>kicad</tag>
+      <tag>pcb</tag>
     </workbench>
   </content>
 
