--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
   <name>KicadStepUp Workbench</name>
   <description>A bidirectional ECAD/MCAD collaboration between KiCAD and FreeCAD.</description>
-  <version>10.10.5</version>
+  <version>10.10.6</version>
   <maintainer email="easyw@katamail.com">Maui</maintainer>
   <license file="LICENSE">AGPLv3.0</license>
   <url type="repository" branch="master">https://github.com/easyw/kicadStepUpMod</url>
@@ -13,6 +13,9 @@
       <classname>KicadStepUp Workbench</classname>
       <subdirectory>./</subdirectory>
       <freecadmin>0.17.0</freecadmin>
+      <tag>kicad</tag>
+      <tag>pcb</tag>
+      <tag>step</tag>
     </workbench>
   </content>
 
